2005-05-17 Magnus Hagdorn
 * glide_types.f90: added variable basal heat flux
 * glide_vars.def: ditto
 * glide_temp.f90: replaced scalar geothermal heat flux with variable
   basal heat flux
 * glide.f90: initialise variable basal heat flux with scalar geothermal 
   heat flux

2005-05-17 Ian Rutt
 * Added test example for energy-balance mass-balance scheme
 * Changed mass-balance schemes to only calculate 'land' points (i.e. mask
 is passed though) - hopefully might speed things up.
 * Removed unnecessary log line in glex_ebm_clim.f90 - we do need to convert temperature

2005-05-16 Ian Rutt
 * Removed dummy code glimmer_enmabal.f90
 * Merged in changes to allow use of RAPID energy-balance mass-balance
 model (not released yet). These are activated using the --with-enmabal
 flag in configure. 

2005-05-13 Magnus Hagdorn
 * glide_velo.f90: simplify API of calcbtrc, add sliding param depending on basal melt;
   simplify API of slipvelo
 * glide_thck.f90: hook-up new slipvelo
 * glide.f90: hook-up new slipvelo; write glimmer version to log
 * glide_types.f90: add new params to deal with new sliding parameterisation
 * glide_setup.f90: read new params for configuration file
 * tests/Makefile.am: tell make which files to delete on make clean

2005-05-13 Magnus Hagdorn
 * cvs_version.py: script used to parse CVS/Entries file to get date and branch of
   the most recently checked-out file
 * glimmer_version.f90.in renamed to glimmer_version.f90.in.in
 * Makefile.am generates glimmer_version.f90 from glimmer_version.f90.in using cvs_version.py
 * configure.in: add CVS date to version string if we compile from CVS sources

2005-05-11 Ian Rutt
 * configure.in: added rule to enable preprocessor in gfortran. Note that
 gfortran can't actually compile glimmer at the moment, but hopefully will
 be able to one day.
	
2005-04-22 Magnus Hagdorn
 * glimmer_ncio.f90: add sanity checking to make sure input netCDF file have the same
   grid size as the one specified in config file