@@ -1,3 +1,6 @@
+2005-05-18 Ian Rutt
+ * Bug-fix changes to couple to Energy-balance mass-balance model
+
 2005-05-17 Magnus Hagdorn
  * glide_types.f90: added variable basal heat flux
  * glide_vars.def: ditto
